@@ -151,55 +151,51 @@ jQuery( function( $ ) {
 
 				var url = express ? dhp_get_url('express_checkout') : dhp_get_url('embed_checkout');
 
-				if(false && express){
-					window.location.href = url + "&" + $form.serialize();
-				}else{
-					$.ajax({
-						type:		'POST',
-						url:		url,
-						data:		$form.serialize(),
-						dataType:   'json',
-						success:	function( result ) {
-							dhpCheckout.$checkout_form.removeClass( 'processing' ).unblock();
-							try {
-								if ( 'success' === result.result ) {
-									if ( -1 === result.redirect.indexOf( 'https://' ) || -1 === result.redirect.indexOf( 'http://' ) ) {
-										window.location = result.redirect;
-									} else {
-										window.location = decodeURI( result.redirect );
-									}
-								} else if ( 'failure' === result.result ) {
-									dhpCheckout.submit_error( result.messages );
-									//throw 'Result failure';
+				$.ajax({
+					type:		'POST',
+					url:		url,
+					data:		$form.serialize(),
+					dataType:   'json',
+					success:	function( result ) {
+						dhpCheckout.$checkout_form.removeClass( 'processing' ).unblock();
+						try {
+							if ( 'success' === result.result ) {
+								if ( -1 === result.redirect.indexOf( 'https://' ) || -1 === result.redirect.indexOf( 'http://' ) ) {
+									window.location = result.redirect;
 								} else {
-									dhpCheckout.submit_error( result.messages );
-									//throw 'Invalid response';
+									window.location = decodeURI( result.redirect );
 								}
-							} catch( err ) {
-								// Reload page
-								if ( true === result.reload ) {
-									window.location.reload();
-									return;
-								}
-
-								// Trigger update in case we need a fresh nonce
-								if ( true === result.refresh ) {
-									$( document.body ).trigger( 'update_checkout' );
-								}
-
-								// Add new errors
-								if ( result.messages ) {
-									dhpCheckout.submit_error( '<div class="woocommerce-error">' + result.messages + '</div>' );
-								} else {
-									dhpCheckout.submit_error( '<div class="woocommerce-error">' + wc_checkout_params.i18n_checkout_error + '</div>' );
-								}
+							} else if ( 'failure' === result.result ) {
+								dhpCheckout.submit_error( result.messages );
+								//throw 'Result failure';
+							} else {
+								dhpCheckout.submit_error( result.messages );
+								//throw 'Invalid response';
 							}
-						},
-						error:	function( jqXHR, textStatus, errorThrown ) {
-							dhpCheckout.submit_error( '<div class="woocommerce-error">' + errorThrown + '</div>' );
+						} catch( err ) {
+							// Reload page
+							if ( true === result.reload ) {
+								window.location.reload();
+								return;
+							}
+
+							// Trigger update in case we need a fresh nonce
+							if ( true === result.refresh ) {
+								$( document.body ).trigger( 'update_checkout' );
+							}
+
+							// Add new errors
+							if ( result.messages ) {
+								dhpCheckout.submit_error( '<div class="woocommerce-error">' + result.messages + '</div>' );
+							} else {
+								dhpCheckout.submit_error( '<div class="woocommerce-error">' + wc_checkout_params.i18n_checkout_error + '</div>' );
+							}
 						}
-					});
-				}
+					},
+					error:	function( jqXHR, textStatus, errorThrown ) {
+						dhpCheckout.submit_error( '<div class="woocommerce-error">' + errorThrown + '</div>' );
+					}
+				});
 			}
 
 			return false;
